--- a/SCSS/components/_mixins.SCSS
+++ b/SCSS/components/_mixins.SCSS
@@ -12,6 +12,7 @@
 
 @mixin text2 {
     text-align: center;
+    font-size: 14px;
     text-transform: unset;
     font-weight: 300;
     letter-spacing: 1.5px;
