--- a/SCSS/styles.SCSS
+++ b/SCSS/styles.SCSS
@@ -1,110 +1,4 @@
 @import "components/variables";
 @import "components/mixins";
 @import "components/mainmenu";
-
-* {
-    margin: 0;
-    padding: 0;
-}
-
-header {
-    width: 100%;
-    height: auto;
-    .container_all {
-        width: 100%;
-        height: auto;
-        .container_menu {
-            width: 100%;
-            height: 10vh;
-            input {
-                display: none;
-            }
-            label
-                .icon {
-                    padding: 15px;
-                }
-            .menu {
-                width: 100%;
-                height: auto;
-                background-image: linear-gradient(to right, #434343 0%, black 100%);
-                transform: translateY(-150%);
-                transition: all 1s ease-in-out;
-                ul {
-                    @include margen;
-                    display: flex;
-                    flex-direction: column;
-                }
-                .iten_logo {
-                    flex: 80;
-                    list-style: none;
-                    padding-top: 20px;
-                    padding-bottom: 20px;
-                    border-bottom: 1px solid #fff;
-                    cursor: pointer;
-                }
-                .iten {
-                    flex: 20;
-                    list-style: none;
-                    padding-bottom: 20px;
-                    padding-top: 20px;
-                    border-bottom: 1px solid #fff;
-                    cursor: pointer;
-                    &.iten:nth-child(3) {
-                        border-bottom: none;
-                    }
-                }
-                a {
-                    width: 100%;
-                    text-decoration: none;
-                    color: #fdfbfb;
-                }
-            }
-            #btn-menu:checked ~ .menu {
-                transform: translateY(0);
-            }
-        }
-    }
-    .container_main {
-        @include margen;
-        display: flex;
-        flex-wrap: wrap;
-        flex-wrap: wrap-reverse;
-        justify-content: space-between;
-        align-items: center;
-        .text_main {
-             @include margen;
-            .maintext {
-                @include text1;
-                margin-bottom: 20px;
-            }
-            .secondtext {
-                 @include text2;
-                font-size: $fontsmall;
-            }
-            .btn {
-                width: 120px;
-                display: block;
-                margin-left: auto;
-                margin-right: auto;
-                margin-top: 20px;
-                height: auto;
-                padding: 10px 20px;
-                border-radius: 30px;
-                border: none;
-                    a {
-                        text-decoration: none;
-                        color: $color_footer;
-                    }
-            }
-        }
-        .img_main {
-            @include margen;
-            img {
-                width: 100%;
-                max-width: 100%;
-                height: auto;
-            }
-        }
-    }
-}
-
+@import "components/hero";
