--- a/css/styles.css
+++ b/css/styles.css
@@ -12,13 +12,21 @@ header .container_all {
   height: auto;
 }
 header .container_all .container_menu {
-  width: 100%;
+  width: 90%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
   height: 10vh;
 }
 header .container_all .container_menu input {
   display: none;
 }
-header .container_all .container_menu label .icon {
+@media screen and (min-width: 768px) {
+  header .container_all .container_menu label {
+    display: none;
+  }
+}
+header .container_all .container_menu .icon {
   padding: 15px;
 }
 header .container_all .container_menu .menu {
@@ -28,6 +36,12 @@ header .container_all .container_menu .menu {
   transform: translateY(-150%);
   transition: all 1s ease-in-out;
 }
+@media screen and (min-width: 768px) {
+  header .container_all .container_menu .menu {
+    transform: translateY(0);
+    background-image: none;
+  }
+}
 header .container_all .container_menu .menu ul {
   width: 90%;
   height: auto;
@@ -35,6 +49,25 @@ header .container_all .container_menu .menu ul {
   margin-right: auto;
   display: flex;
   flex-direction: column;
+}
+@media screen and (min-width: 768px) {
+  header .container_all .container_menu .menu ul {
+    flex-direction: row;
+    width: 90%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media screen and (min-width: 1024px) {
+  header .container_all .container_menu .menu ul {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 1440px) {
+  header .container_all .container_menu .menu ul {
+    width: 100%;
+  }
 }
 header .container_all .container_menu .menu .iten_logo {
   flex: 80;
@@ -44,24 +77,48 @@ header .container_all .container_menu .menu .iten_logo {
   border-bottom: 1px solid #fff;
   cursor: pointer;
 }
+@media screen and (min-width: 1024px) {
+  header .container_all .container_menu .menu .iten_logo {
+    font-size: 24px;
+    font-weight: bold;
+  }
+}
 header .container_all .container_menu .menu .iten {
   flex: 20;
   list-style: none;
   padding-bottom: 20px;
   padding-top: 20px;
   border-bottom: 1px solid #fff;
-  cursor: pointer;
 }
 header .container_all .container_menu .menu .iten.iten:nth-child(3) {
   border-bottom: none;
+}
+@media screen and (min-width: 1024px) {
+  header .container_all .container_menu .menu .iten {
+    text-align: center;
+  }
 }
 header .container_all .container_menu .menu a {
   width: 100%;
   text-decoration: none;
   color: #fdfbfb;
+  cursor: pointer;
+}
+@media screen and (min-width: 768px) {
+  header .container_all .container_menu .menu a {
+    color: #000;
+  }
 }
 header .container_all .container_menu #btn-menu:checked ~ .menu {
   transform: translateY(0);
+}
+@media screen and (min-width: 1440px) {
+  header .container_all .container_menu {
+    width: 90%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 header .container_main {
   width: 90%;
@@ -75,46 +132,132 @@ header .container_main {
   align-items: center;
 }
 header .container_main .text_main {
-  width: 90%;
-  height: auto;
-  margin-left: auto;
-  margin-right: auto;
+  width: 100%;
 }
 header .container_main .text_main .maintext {
   text-align: center;
   text-transform: capitalize;
   margin-bottom: 20px;
 }
+@media screen and (min-width: 1024px) {
+  header .container_main .text_main .maintext {
+    text-align: left;
+    line-height: 75px;
+    font-size: 48px;
+  }
+  header .container_main .text_main .maintext br {
+    display: block;
+  }
+  header .container_main .text_main .maintext .apart {
+    display: none;
+  }
+}
+header .container_main .text_main br {
+  display: none;
+}
+header .container_main .text_main .break {
+  display: block;
+}
 header .container_main .text_main .secondtext {
   text-align: center;
+  font-size: 14px;
   text-transform: unset;
   font-weight: 300;
   letter-spacing: 1.5px;
   font-size: 16px;
 }
+header .container_main .text_main .secondtext .separate {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  header .container_main .text_main .secondtext .separate {
+    display: block;
+  }
+}
+@media screen and (min-width: 768px) {
+  header .container_main .text_main .secondtext {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    font-weight: 300;
+  }
+}
+@media screen and (min-width: 1024px) {
+  header .container_main .text_main .secondtext {
+    width: 100%;
+    text-align: left;
+    line-height: 25px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  header .container_main .text_main .secondtext {
+    width: 80%;
+    margin: 0;
+  }
+}
 header .container_main .text_main .btn {
-  width: 120px;
+  width: 125px;
   display: block;
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
   height: auto;
-  padding: 10px 20px;
+  padding: 15px 20px;
   border-radius: 30px;
-  border: none;
+  background-color: #000;
+}
+@media screen and (min-width: 1024px) {
+  header .container_main .text_main .btn {
+    margin: 0;
+    margin-top: 25px;
+    border: none;
+  }
 }
 header .container_main .text_main .btn a {
   text-decoration: none;
-  color: #000;
+  color: #fff;
+}
+@media screen and (min-width: 1024px) {
+  header .container_main .text_main {
+    width: 48%;
+  }
 }
 header .container_main .img_main {
-  width: 90%;
-  height: auto;
-  margin-left: auto;
-  margin-right: auto;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  header .container_main .img_main {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media screen and (min-width: 1024px) {
+  header .container_main .img_main {
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+  }
 }
 header .container_main .img_main img {
   width: 100%;
   max-width: 100%;
   height: auto;
+}
+@media screen and (min-width: 768px) {
+  header .container_main .img_main img {
+    width: 60%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  header .container_main .img_main img {
+    width: 90%;
+  }
+}
+@media screen and (min-width: 1440px) {
+  header .container_main .img_main img {
+    width: 80%;
+  }
 }
