--- a/SCSS/components/_hero.SCSS
+++ b/SCSS/components/_hero.SCSS
@@ -107,6 +107,9 @@ header {
             .maintext {
                 @include text1;
                 margin-bottom: 20px;
+                .apart {
+                    display: none;
+                }
                 @media screen and (min-width: 768px) {
                     br {
                         display: none
