--- a/SCSS/components/_about.SCSS
+++ b/SCSS/components/_about.SCSS
@@ -2,7 +2,7 @@
     width: 100%;
     height: auto;
     margin-top: 50px;
-    background-image: url(/img/Galery/headphones-690685_1920.jpg);
+    background-image: url(../img/Galery/headphones-690685_1920.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
