--- a/css/styles.css
+++ b/css/styles.css
@@ -277,7 +277,7 @@ header .container_main .img_main img {
   width: 100%;
   height: auto;
   margin-top: 50px;
-  background-image: url(/img/Galery/headphones-690685_1920.jpg);
+  background-image: url(../img/Galery/headphones-690685_1920.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
