--- a/SCSS/components/_about.SCSS
+++ b/SCSS/components/_about.SCSS
@@ -5,7 +5,9 @@
     background-image: url(../img/Galery/headphones-690685_1920.jpg);
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
+    object-fit: cover;
+    overflow: hidden;
     .container {
         @include margen;
         .text1 {
