--- a/SCSS/components/_about.SCSS
+++ b/SCSS/components/_about.SCSS
@@ -8,6 +8,10 @@
     background-size: 100% 100%;
     object-fit: cover;
     overflow: hidden;
+    @media screen and (min-width: 1440px) {
+        height: 400px;
+        margin-top: 0;
+    }
     .container {
         @include margen;
         .text1 {
