--- a/SCSS/styles.SCSS
+++ b/SCSS/styles.SCSS
@@ -17,13 +17,56 @@
             width: 100%;
             height: auto;
             overflow: hidden;
+            @media screen and (min-width: 768px) {
+                &:nth-child(1) {
+                    flex: 30;
+                }
+                &:nth-child(2) {
+                    flex: 50;
+                    display: flex;
+                    flex-wrap: wrap;
+                    .p1 {
+                        width: 100%;
+                        height: auto;
+                        .im1 {
+                            width: 100%;
+                            max-width: 100%;
+                            height: auto
+                        }
+                    }
+                    .p2 {
+                        width: 50%;
+                        height: auto;
+                        .im2 {
+                            width: 100%;
+                            max-width: 100%;
+                            height: auto;
+                        }
+                    }
+                    .p3 {
+                        width: 50%;
+                        height: unset;
+                        .im3 {
+                            width: 100%;
+                            max-width: 100%;
+                            height: auto;
+                        }
+                    }
+                }
+                &:nth-child(3) {
+                    flex: 20;
+                }
+            }
             .main {
                 width: 100%;
                 max-width: 100%;
-                height: auto;
+                height: 100%;
+                object-fit: cover;
             }
             .p1, .p2, .p3 {
                 width: 100%;
+                height: auto;
+                object-fit: cover;
                 .im1, .im2, .im3 {
                     width: 100%;
                     max-width: 100%;
@@ -32,6 +75,7 @@
             }
             .up {
                 width: 100%;
+                height: 50%;
                 .up1, .up2 {
                     width: 100%;
                     max-width: 100%;
