--- a/SCSS/styles.SCSS
+++ b/SCSS/styles.SCSS
@@ -42,12 +42,13 @@
                             max-width: 100%;
                             height: auto;
                             @media screen and (min-width: 1024px) {
-                                height: 175px;
+                                height: 100%;
+                                height: 100%;
                                 object-fit: cover;
                             }
                         }
                         @media screen and (min-width: 1024px) {
-                            height: 175px;
+                            height: 50%;
                         }
                     }
                     .p2 {
@@ -60,18 +61,22 @@
                             max-width: 100%;
                             height: auto;
                             @media screen and (min-width: 1024px) {
-                                height: 175px;
-                                object-fit: cover;
+                                width: 100%;
+                                height: 100%;
                             }
                         }
                     }
                     .p3 {
                         width: 50%;
-                        height: unset;
+                        height: auto;
                         .im3 {
                             width: 100%;
                             max-width: 100%;
                             height: auto;
+                            @media screen and (min-width: 1024px) {
+                                width: 100%;
+                                height: 100%;
+                            }
                         }
                     }
                 }
@@ -101,15 +106,22 @@
             .up {
                 width: 100%;
                 height: 50%;
+                @media screen and (min-width: 1024px) {
+                    height: 50%;
+                }
                 .up1, .up2 {
                     width: 100%;
                     max-width: 100%;
-                    height: auto;
+                    height: 100%;
+                    object-fit: cover;
+                    @media screen and (min-width: 1024px) {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: contain;
+                    }
                 }
             }
-            @media screen and (min-width: 1024px) {
-                height: 350px;
-            }
+            
         }
         
     }
