--- a/css/styles.css
+++ b/css/styles.css
@@ -416,13 +416,14 @@ header .container_main .img_main img {
 }
 @media screen and (min-width: 768px) and (min-width: 1024px) {
   .galery .container_galery .box:nth-child(2) .p1 .im1 {
-    height: 175px;
+    height: 100%;
+    height: 100%;
     object-fit: cover;
   }
 }
 @media screen and (min-width: 768px) and (min-width: 1024px) {
   .galery .container_galery .box:nth-child(2) .p1 {
-    height: 175px;
+    height: 50%;
   }
 }
 @media screen and (min-width: 768px) {
@@ -440,19 +441,25 @@ header .container_main .img_main img {
 }
 @media screen and (min-width: 768px) and (min-width: 1024px) {
   .galery .container_galery .box:nth-child(2) .p2 .im2 {
-    height: 175px;
-    object-fit: cover;
+    width: 100%;
+    height: 100%;
   }
 }
 @media screen and (min-width: 768px) {
   .galery .container_galery .box:nth-child(2) .p3 {
     width: 50%;
-    height: unset;
+    height: auto;
   }
   .galery .container_galery .box:nth-child(2) .p3 .im3 {
     width: 100%;
     max-width: 100%;
     height: auto;
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 1024px) {
+  .galery .container_galery .box:nth-child(2) .p3 .im3 {
+    width: 100%;
+    height: 100%;
   }
 }
 @media screen and (min-width: 768px) {
@@ -485,13 +492,21 @@ header .container_main .img_main img {
   width: 100%;
   height: 50%;
 }
+@media screen and (min-width: 1024px) {
+  .galery .container_galery .box .up {
+    height: 50%;
+  }
+}
 .galery .container_galery .box .up .up1, .galery .container_galery .box .up .up2 {
   width: 100%;
   max-width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
 }
 @media screen and (min-width: 1024px) {
-  .galery .container_galery .box {
-    height: 350px;
+  .galery .container_galery .box .up .up1, .galery .container_galery .box .up .up2 {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
   }
 }
