--- a/SCSS/styles.SCSS
+++ b/SCSS/styles.SCSS
@@ -12,79 +12,127 @@
         width: 100%;
         display: flex;
         flex-wrap: wrap;
-        @media screen and (min-width: 1024px) {
-            height: 450px;
-        }
         .box {
             width: 100%;
             height: 450px;
             overflow: hidden;
-            @media screen and (min-width: 768px) {
+            @media screen and (min-width: 1024px) {
                 &:nth-child(1) {
-                    flex: 30;
-                    @media screen and (min-width: 1024px) {
-                        height: 450px;
-                    }
+                    height: 500px;
                 }
-                &:nth-child(2) {
-                    flex: 40;
+            }
+            @media screen and (min-width: 1440px) {
+                &:nth-child(1) {
+                    height: 680px;
+                }
+            }
+            &:nth-child(2) {
+                height: 945px;
+                @media screen and (min-width: 768px) {
+                    height: 450px;
                     display: flex;
                     flex-wrap: wrap;
-                    @media screen and (min-width: 1024px) {
-                        height: 450px;
-                    }
                     .p1 {
                         width: 100%;
-                        height: auto;
-                        overflow: hidden;
+                        height: 225px;
+                        @media screen and (min-width: 1024px) {
+                            height: 250px;
+                        }
+                        @media screen and (min-width: 1440px) {
+                            height: 340px;
+                        }
                         .im1 {
                             width: 100%;
                             max-width: 100%;
-                            height: auto;
-                            @media screen and (min-width: 1024px) {
-                                height: 100%;
-                                height: 100%;
-                                object-fit: cover;
-                            }
+                            height: 100%;
+                            object-fit: cover;
                         }
-                        @media screen and (min-width: 1024px) {
-                            height: 50%;
-                        }
-                    }
+                    } 
                     .p2 {
                         width: 50%;
-                        max-width: 100%;
-                        height: auto;
-                        object-fit: cover;
+                        height: 225px;
                         .im2 {
                             width: 100%;
                             max-width: 100%;
-                            height: auto;
-                            @media screen and (min-width: 1024px) {
-                                width: 100%;
-                                height: 100%;
-                            }
+                            height: 100%;
+                            object-fit: cover;
+                        }
+                        @media screen and (min-width: 1024px) {
+                            height: 250px;
+                        }
+                        @media screen and (min-width: 1440px) {
+                            height: 340px;
                         }
                     }
                     .p3 {
                         width: 50%;
-                        height: auto;
+                        height: 225px;
                         .im3 {
                             width: 100%;
                             max-width: 100%;
-                            height: auto;
-                            @media screen and (min-width: 1024px) {
-                                width: 100%;
-                                height: 100%;
-                            }
+                            height: 100%;
+                            object-fit: cover;
+                        }
+                        @media screen and (min-width: 1024px) {
+                            height: 250px;
+                        }
+                        @media screen and (min-width: 1440px) {
+                            height: 340px;
+                        }
+                    }
+                    
+                }
+                @media screen and (min-width: 1024px) {
+                    &:nth-child(2) {
+                        height: 500px;
+                    }
+                }
+                @media screen and (min-width: 1440px) {
+                    &:nth-child(2) {
+                        height: 680px;
+                    }
+                }
+            }
+            &:nth-child(3) {
+                height: 950px;
+                @media screen and (min-width: 768px) {
+                    height: 450px;
+                    display: flex;
+                    flex-wrap: wrap;
+                    .up {
+                        width: 100%;
+                        height: 50%;
+                        .up1, .up2 {
+                            width: 100%;
+                            max-width: 100%;
+                            height: 100%;
+                            object-fit: cover;
                         }
                     }
                 }
-                &:nth-child(3) {
-                    flex: 30;
-                    @media screen and (min-width: 1024px) {
-                        height: 450px;
+                @media screen and (min-width: 1024px) {
+                    &:nth-child(3) {
+                        height: 500px;
+                        @media screen and (min-width: 1440px) {
+                            height: 680px;;
+                        }
                     }
+                }
+                @media screen and (min-width: 1440px) {
+                    &:nth-child(3) {
+                        height: 680px;
+                    }
+                }
+            }
+            @media screen and (min-width: 768px) {
+                &:nth-child(1) {
+                    flex: 30;
+                }
+                &:nth-child(2) {
+                    flex: 45;
+                }
+                &:nth-child(3) {
+                    flex: 25;
                 }
             }
             .main {
@@ -114,11 +162,6 @@
                     max-width: 100%;
                     height: 100%;
                     object-fit: cover;
-                    @media screen and (min-width: 1024px) {
-                        width: 100%;
-                        height: 100%;
-                        object-fit: contain;
-                    }
                 }
             }
             
