--- a/css/styles.css
+++ b/css/styles.css
@@ -370,106 +370,151 @@ header .container_main .img_main img {
   display: flex;
   flex-wrap: wrap;
 }
-@media screen and (min-width: 1024px) {
-  .galery .container_galery {
-    height: 450px;
-  }
-}
 .galery .container_galery .box {
   width: 100%;
   height: 450px;
   overflow: hidden;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1024px) {
   .galery .container_galery .box:nth-child(1) {
-    flex: 30;
+    height: 500px;
   }
 }
-@media screen and (min-width: 768px) and (min-width: 1024px) {
+@media screen and (min-width: 1440px) {
   .galery .container_galery .box:nth-child(1) {
-    height: 450px;
+    height: 680px;
   }
+}
+.galery .container_galery .box:nth-child(2) {
+  height: 945px;
 }
 @media screen and (min-width: 768px) {
   .galery .container_galery .box:nth-child(2) {
-    flex: 40;
+    height: 450px;
     display: flex;
     flex-wrap: wrap;
   }
+  .galery .container_galery .box:nth-child(2) .p1 {
+    width: 100%;
+    height: 225px;
+  }
 }
 @media screen and (min-width: 768px) and (min-width: 1024px) {
-  .galery .container_galery .box:nth-child(2) {
-    height: 450px;
+  .galery .container_galery .box:nth-child(2) .p1 {
+    height: 250px;
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 1440px) {
+  .galery .container_galery .box:nth-child(2) .p1 {
+    height: 340px;
   }
 }
 @media screen and (min-width: 768px) {
-  .galery .container_galery .box:nth-child(2) .p1 {
-    width: 100%;
-    height: auto;
-    overflow: hidden;
-  }
   .galery .container_galery .box:nth-child(2) .p1 .im1 {
     width: 100%;
     max-width: 100%;
-    height: auto;
-  }
-}
-@media screen and (min-width: 768px) and (min-width: 1024px) {
-  .galery .container_galery .box:nth-child(2) .p1 .im1 {
-    height: 100%;
     height: 100%;
     object-fit: cover;
-  }
-}
-@media screen and (min-width: 768px) and (min-width: 1024px) {
-  .galery .container_galery .box:nth-child(2) .p1 {
-    height: 50%;
   }
 }
 @media screen and (min-width: 768px) {
   .galery .container_galery .box:nth-child(2) .p2 {
     width: 50%;
-    max-width: 100%;
-    height: auto;
-    object-fit: cover;
+    height: 225px;
   }
   .galery .container_galery .box:nth-child(2) .p2 .im2 {
     width: 100%;
     max-width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: cover;
   }
 }
 @media screen and (min-width: 768px) and (min-width: 1024px) {
-  .galery .container_galery .box:nth-child(2) .p2 .im2 {
-    width: 100%;
-    height: 100%;
+  .galery .container_galery .box:nth-child(2) .p2 {
+    height: 250px;
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 1440px) {
+  .galery .container_galery .box:nth-child(2) .p2 {
+    height: 340px;
   }
 }
 @media screen and (min-width: 768px) {
   .galery .container_galery .box:nth-child(2) .p3 {
     width: 50%;
-    height: auto;
+    height: 225px;
   }
   .galery .container_galery .box:nth-child(2) .p3 .im3 {
     width: 100%;
     max-width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: cover;
   }
 }
 @media screen and (min-width: 768px) and (min-width: 1024px) {
-  .galery .container_galery .box:nth-child(2) .p3 .im3 {
-    width: 100%;
-    height: 100%;
+  .galery .container_galery .box:nth-child(2) .p3 {
+    height: 250px;
   }
+}
+@media screen and (min-width: 768px) and (min-width: 1440px) {
+  .galery .container_galery .box:nth-child(2) .p3 {
+    height: 340px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .galery .container_galery .box:nth-child(2):nth-child(2) {
+    height: 500px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .galery .container_galery .box:nth-child(2):nth-child(2) {
+    height: 680px;
+  }
+}
+.galery .container_galery .box:nth-child(3) {
+  height: 950px;
 }
 @media screen and (min-width: 768px) {
   .galery .container_galery .box:nth-child(3) {
-    flex: 30;
+    height: 450px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .galery .container_galery .box:nth-child(3) .up {
+    width: 100%;
+    height: 50%;
+  }
+  .galery .container_galery .box:nth-child(3) .up .up1, .galery .container_galery .box:nth-child(3) .up .up2 {
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
-@media screen and (min-width: 768px) and (min-width: 1024px) {
+@media screen and (min-width: 1024px) {
+  .galery .container_galery .box:nth-child(3):nth-child(3) {
+    height: 500px;
+  }
+}
+@media screen and (min-width: 1024px) and (min-width: 1440px) {
+  .galery .container_galery .box:nth-child(3):nth-child(3) {
+    height: 680px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .galery .container_galery .box:nth-child(3):nth-child(3) {
+    height: 680px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .galery .container_galery .box:nth-child(1) {
+    flex: 30;
+  }
+  .galery .container_galery .box:nth-child(2) {
+    flex: 45;
+  }
   .galery .container_galery .box:nth-child(3) {
-    height: 450px;
+    flex: 25;
   }
 }
 .galery .container_galery .box .main {
@@ -502,11 +547,4 @@ header .container_main .img_main img {
   max-width: 100%;
   height: 100%;
   object-fit: cover;
-}
-@media screen and (min-width: 1024px) {
-  .galery .container_galery .box .up .up1, .galery .container_galery .box .up .up2 {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-  }
 }
