--- a/SCSS/styles.SCSS
+++ b/SCSS/styles.SCSS
@@ -3,169 +3,53 @@
 @import "components/mainmenu";
 @import "components/hero";
 @import "components/about";
+@import "components/galey";
 
 
-.galery {
+.contact {
     width: 100%;
     height: auto;
-    .container_galery {
-        width: 100%;
+    background-color: #444444;
+    .container_contact {
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
         display: flex;
         flex-wrap: wrap;
-        .box {
-            width: 100%;
-            height: 450px;
-            overflow: hidden;
-            @media screen and (min-width: 1024px) {
-                &:nth-child(1) {
-                    height: 500px;
-                }
+        .conta_box {
+            width: 90%;
+            margin-left: auto;
+            margin-right: auto;
+            color: #fff;
+            &:nth-child(1) {
+                font-size: 36px;
+                text-align: center;
+                padding-top: 50px;
             }
-            @media screen and (min-width: 1440px) {
-                &:nth-child(1) {
-                    height: 680px;
-                }
+            &:nth-child(4) {
+                font-size: 18px;
+                letter-spacing: 2px;
+                text-align: center;
+                padding-top: 10px;
             }
-            &:nth-child(2) {
-                height: 945px;
-                @media screen and (min-width: 768px) {
-                    height: 450px;
-                    display: flex;
-                    flex-wrap: wrap;
-                    .p1 {
-                        width: 100%;
-                        height: 225px;
-                        @media screen and (min-width: 1024px) {
-                            height: 250px;
-                        }
-                        @media screen and (min-width: 1440px) {
-                            height: 340px;
-                        }
-                        .im1 {
-                            width: 100%;
-                            max-width: 100%;
-                            height: 100%;
-                            object-fit: cover;
-                        }
-                    } 
-                    .p2 {
-                        width: 50%;
-                        height: 225px;
-                        .im2 {
-                            width: 100%;
-                            max-width: 100%;
-                            height: 100%;
-                            object-fit: cover;
-                        }
-                        @media screen and (min-width: 1024px) {
-                            height: 250px;
-                        }
-                        @media screen and (min-width: 1440px) {
-                            height: 340px;
-                        }
-                    }
-                    .p3 {
-                        width: 50%;
-                        height: 225px;
-                        .im3 {
-                            width: 100%;
-                            max-width: 100%;
-                            height: 100%;
-                            object-fit: cover;
-                        }
-                        @media screen and (min-width: 1024px) {
-                            height: 250px;
-                        }
-                        @media screen and (min-width: 1440px) {
-                            height: 340px;
-                        }
-                    }
-                    
-                }
-                @media screen and (min-width: 1024px) {
-                    &:nth-child(2) {
-                        height: 500px;
-                    }
-                }
-                @media screen and (min-width: 1440px) {
-                    &:nth-child(2) {
-                        height: 680px;
-                    }
-                }
-            }
-            &:nth-child(3) {
-                height: 950px;
-                @media screen and (min-width: 768px) {
-                    height: 450px;
-                    display: flex;
-                    flex-wrap: wrap;
-                    .up {
-                        width: 100%;
-                        height: 50%;
-                        .up1, .up2 {
-                            width: 100%;
-                            max-width: 100%;
-                            height: 100%;
-                            object-fit: cover;
-                        }
-                    }
-                }
-                @media screen and (min-width: 1024px) {
-                    &:nth-child(3) {
-                        height: 500px;
-                        @media screen and (min-width: 1440px) {
-                            height: 680px;;
-                        }
-                    }
-                }
-                @media screen and (min-width: 1440px) {
-                    &:nth-child(3) {
-                        height: 680px;
-                    }
-                }
-            }
-            @media screen and (min-width: 768px) {
-                &:nth-child(1) {
-                    flex: 30;
-                }
-                &:nth-child(2) {
-                    flex: 45;
-                }
-                &:nth-child(3) {
-                    flex: 25;
-                }
-            }
-            .main {
-                width: 100%;
-                max-width: 100%;
-                height: 100%;
-                object-fit: cover;
-            }
-            .p1, .p2, .p3 {
-                width: 100%;
-                height: auto;
-                object-fit: cover;
-                .im1, .im2, .im3 {
-                    width: 100%;
-                    max-width: 100%;
-                    height: auto;
-                }
-            }
-            .up {
-                width: 100%;
-                height: 50%;
-                @media screen and (min-width: 1024px) {
-                    height: 50%;
-                }
-                .up1, .up2 {
-                    width: 100%;
-                    max-width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                }
-            }
-            
         }
-        
+        .box2, .box3 {
+            display: none;
+        } 
+        .box4 {
+            width: 100%;
+            .input {
+                display: block;
+                width: 70%;
+                height: 30px;
+                margin-left: auto;
+                margin-right: auto;
+                margin-top: 20px;
+                margin-bottom: 20px;
+                border-radius: 30px;
+                text-align: center;
+                font-size: 18px;
+            }
+        }
     }
 }
