--- a/css/styles.css
+++ b/css/styles.css
@@ -583,16 +583,29 @@ header .container_main .img_main img {
 }
 .contact .container_contact .box4 {
   width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  box-sizing: border-box;
 }
 .contact .container_contact .box4 .input {
   display: block;
   width: 70%;
-  height: 30px;
-  margin-left: auto;
-  margin-right: auto;
+  height: 31px;
   margin-top: 20px;
   margin-bottom: 20px;
-  border-radius: 30px;
+  border-radius: 30px 0 0 30px;
   text-align: center;
   font-size: 18px;
+  background-color: #333;
+  color: #fff;
+}
+.contact .container_contact .box4 .button_conta {
+  width: 28%;
+  height: 31px;
+  letter-spacing: 4px;
+  margin-top: 22px;
+  margin-bottom: 20px;
+  margin-right: -5px;
+  border-radius: 0 30px 30px 0;
+  border: 1px solid #fff;
 }
