--- a/SCSS/styles.SCSS
+++ b/SCSS/styles.SCSS
@@ -32,7 +32,11 @@
                 text-align: center;
                 padding-top: 10px;
             }
+            @media screen and (min-width: 768px) {
+                width: 21%;
+            }
         }
+
         .box2, .box3 {
             display: none;
         } 
@@ -62,6 +66,16 @@
                 margin-right: -5px;
                 border-radius: 0 30px 30px 0;
                 border: 1px solid #fff;
+            }
+            .espace {
+                width: 100%;
+                padding-top: 15px;
+                padding-bottom: 15px;
+                text-align: center;
+                font-size: 18px;
+                letter-spacing: 5px;
+                font-weight: 300;
+                text-transform: uppercase;
             }
         }
     }
