--- a/css/styles.css
+++ b/css/styles.css
@@ -578,6 +578,11 @@ header .container_main .img_main img {
   text-align: center;
   padding-top: 10px;
 }
+@media screen and (min-width: 768px) {
+  .contact .container_contact .conta_box {
+    width: 21%;
+  }
+}
 .contact .container_contact .box2, .contact .container_contact .box3 {
   display: none;
 }
@@ -608,4 +613,14 @@ header .container_main .img_main img {
   margin-right: -5px;
   border-radius: 0 30px 30px 0;
   border: 1px solid #fff;
+}
+.contact .container_contact .box4 .espace {
+  width: 100%;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  text-align: center;
+  font-size: 18px;
+  letter-spacing: 5px;
+  font-weight: 300;
+  text-transform: uppercase;
 }
