detalles del footer

--- a/SCSS/styles.SCSS
+++ b/SCSS/styles.SCSS
@@ -4,115 +4,8 @@
 @import "components/hero";
 @import "components/about";
 @import "components/galey";
+@import "components/contact";
 @import "components/footer";
 
 
-.contact {
-    width: 100%;
-    height: auto;
-    background-color: #444444;
-    .container_contact {
-        width: 90%;
-        margin-left: auto;
-        margin-right: auto;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        padding: 20px;
-        .conta_box {
-            width: 90%;
-            margin-left: auto;
-            margin-right: auto;
-            color: #fff;
-            &:nth-child(1) {
-                font-size: 36px;
-                text-align: center;
-                padding-top: 50px;
-                @media screen and (min-width: 768px) {
-                    padding-top: 0;
-                    font-size: 27px;
-                }
-            }
-            &:nth-child(4) {
-                font-size: 18px;
-                letter-spacing: 2px;
-                text-align: center;
-                padding-top: 10px;
-                @media screen and (min-width: 768px) {
-                    width: 30%;
-                    font-size: 14px;
-                    margin: 0;
-                    padding: 0;
-                    text-align: center;
-                }
-            }
-            @media screen and (min-width: 768px) {
-                width: 21%;
-            }
-        }
 
-        .box2, .box3 {
-            display: none;
-            @media screen and (min-width: 768px) {
-                display: block;
-                
-            }
-        } 
-        .box4 {
-            width: 100%;
-            display: flex;
-            flex-wrap: wrap;
-            box-sizing: border-box;
-            .input {
-                display: block;
-                width: 70%;
-                height: 35px;
-                margin-top: 18px;
-                margin-bottom: 20px;
-                border-radius: 30px 0 0 30px;
-                border: 0;
-                text-align: center;
-                font-size: 18px;
-                background-color: #333;
-                color: #fff;
-                @media screen and (min-width: 768px) {
-                    font-size: 14px;
-                    margin-top: 10px;
-                    margin-bottom: 10px;
-                }
-            }
-            .button_conta {
-                width: 28%;
-                height: 32px;
-                letter-spacing: 4px;
-                margin-top: 20px;
-                margin-bottom: 20px;
-                margin-right: -5px;
-                border-radius: 0 30px 30px 0;
-                border: 1px solid #fff;
-                @media screen and (min-width: 768px) {
-                    font-size: 14px;
-                    margin-top: 10px;
-                    margin-bottom: 10px;
-                    letter-spacing: 0;
-                }
-            }
-            .espace {
-                width: 100%;
-                padding-top: 15px;
-                padding-bottom: 15px;
-                text-align: center;
-                font-size: 18px;
-                letter-spacing: 5px;
-                font-weight: 300;
-                text-transform: uppercase;
-                @media screen and (min-width: 768px) {
-                    font-size: 14px;
-                    padding: 0;
-                    text-align: center;
-                }
-            }
-        }
-    }
-}
